--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ ipython = "^8.25.0"
 ipykernel = "^6.29.4"
 pandas = "^2.2.2"
 matplotlib = "^3.9.0"
+scipy = "^1.14.0"
+scikit-learn = "^1.5.1"
 
 
 [build-system]
